# adversarial-privacy-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment_config.json  field_weights.json  ollama_experiment_config.json  ollama_light_config.json  ollama_tiny_config.json
docs/: findings_template.md  methodology.md
results/ollama_tiny_runs/: example_cases.md  experiment_results.csv  experiment_results.json  findings.md  generated_sensitive_records.csv  generated_sensitive_records.json  run_metadata.json  strategy_comparison.csv  strategy_comparison.json
results/reports/: example_cases.md  findings.md
results/runs/: experiment_results.csv  experiment_results.json  run_metadata.json
results/tables/: strategy_comparison.csv  strategy_comparison.json
src/: config.py  main.py  utils.py
src/data_generation/: generator.py  schema.py  templates.py
src/detection/: leakage_rules.py  scoring.py  utility.py
src/evaluation/: aggregator.py  export.py  metadata.py  runner.py
src/llm/: base.py  factory.py  mock_backend.py  ollama_backend.py
src/prompting/: attack_generator.py  prompt_builder.py  strategies.py
src/tasks/: attack_tasks.py  benign_tasks.py
src/visualization/: plots.py
tests/: test_config_and_metadata.py  test_data_generation.py  test_detection.py  test_scoring_and_backends.py
