[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-privacy-llm"
version = "0.1.0"
description = "Experimental framework for evaluating privacy leakage in LLMs under adversarial prompting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
